--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "^10.13 || 12 || 14 || 15 || 16",
+    "node": "^10.13 || 12 || 14 || 15",
     "npm": ">=6"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "history": "5.0.0",
     "js-cookie": "3.0.0",
     "msw": "0.33.0",
+    "nxt-trendz-cart-features": "file:",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
